add `EXPERIMENTAL_FED_CM_ENABLE` config var for opt-in

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -797,6 +797,18 @@ EVENT_LEVEL_FAILED_LOGIN=info
 #DISABLE_APP_VERSION_CHECK=false
 
 #####################################
+############## FED CM ###############
+#####################################
+
+## CAUTION: The FedCM is highly experimental at this point!
+## Do not attempt to use it in production because it is subject to change in the future!
+## The spec is currently a draft and under active development.
+
+# Set to `true` to enable the experimental FedCM.
+# default: false
+EXPERIMENTAL_FED_CM_ENABLE=true
+
+#####################################
 ####### LIFETIMES / TIMEOUTS ########
 #####################################
 
