new config var `USER_COOKIE_LIFETIME`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -32,6 +32,14 @@ DEV_DPOP_HTTP=true
 # (default: false)
 OPEN_USER_REG=true
 
+# The lifetime in seconds for a Rauthy User Cookie.
+# This cookie keeps track of the last logged in `user_id` to make things like
+# FedCM work. This cookie should have a very long lifetime to provide a good UX.
+# Without this cookie, Rauthy would not even be able to tell the FedCM if a user
+# is logged-out, it will just not work at all.
+# default: 63072000
+#USER_COOKIE_LIFETIME=63072000
+
 # If set to true, the `/userinfo` endpoint will do additional validations.
 # The non-strict mode will fetch the user by id from the `sub` claim and make
 # sure it still exists and is enabled. The strict validation will do additional
