add`SESSION_LIFETIME_FED_CM` + `SESSION_TIMEOUT_FED_CM`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -32,14 +32,6 @@ DEV_DPOP_HTTP=true
 # (default: false)
 OPEN_USER_REG=true
 
-# The lifetime in seconds for a Rauthy User Cookie.
-# This cookie keeps track of the last logged in `user_id` to make things like
-# FedCM work. This cookie should have a very long lifetime to provide a good UX.
-# Without this cookie, Rauthy would not even be able to tell the FedCM if a user
-# is logged-out, it will just not work at all.
-# default: 63072000
-#USER_COOKIE_LIFETIME=63072000
-
 # If set to true, the `/userinfo` endpoint will do additional validations.
 # The non-strict mode will fetch the user by id from the `sub` claim and make
 # sure it still exists and is enabled. The strict validation will do additional
@@ -816,6 +808,19 @@ EVENT_LEVEL_FAILED_LOGIN=info
 # default: false
 EXPERIMENTAL_FED_CM_ENABLE=true
 
+# Session lifetime for FedCM in seconds - the session can not be extended
+# beyond this time and a new login will be forced.
+# default: 2592000
+SESSION_LIFETIME_FED_CM=2592000
+
+# Session timeout for FedCM in seconds
+# When a new token / login is requested before this timeout hits the limit,
+# the user will be authenticated without prompting for the credentials again.
+# This is the value which can extend the session, until it hits its maximum
+# lifetime set with _FED_CM.
+# default: 259200
+SESSION_TIMEOUT_FED_CM=259200
+
 #####################################
 ####### LIFETIMES / TIMEOUTS ########
 #####################################
@@ -849,6 +854,14 @@ SESSION_RENEW_MFA=true
 # prompting for the credentials again.
 # This is the value which can extend the session, until it hits its maximum lifetime set with SESSION_LIFETIME.
 SESSION_TIMEOUT=5400
+
+# The lifetime in seconds for a Rauthy User Cookie.
+# This cookie keeps track of the last logged in `user_id` to make things like
+# FedCM work. This cookie should have a very long lifetime to provide a good UX.
+# Without this cookie, Rauthy would not even be able to tell the FedCM if a user
+# is logged-out, it will just not work at all.
+# default: 63072000
+#USER_COOKIE_LIFETIME=63072000
 
 # ML: magic link
 # LT: lifetime
