disabled fedcm by default in config

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -801,17 +801,17 @@ EVENT_LEVEL_FAILED_LOGIN=info
 #####################################
 
 ## CAUTION: The FedCM is highly experimental at this point!
-## Do not attempt to use it in production because it is subject to change in the future!
-## The spec is currently a draft and under active development.
+## Do not attempt to use it in production because it is subject to change
+## in the future! The spec is currently a draft and under active development.
 
 # Set to `true` to enable the experimental FedCM.
 # default: false
-EXPERIMENTAL_FED_CM_ENABLE=true
+#EXPERIMENTAL_FED_CM_ENABLE=false
 
 # Session lifetime for FedCM in seconds - the session can not be extended
 # beyond this time and a new login will be forced.
 # default: 2592000
-SESSION_LIFETIME_FED_CM=2592000
+#SESSION_LIFETIME_FED_CM=2592000
 
 # Session timeout for FedCM in seconds
 # When a new token / login is requested before this timeout hits the limit,
@@ -819,7 +819,7 @@ SESSION_LIFETIME_FED_CM=2592000
 # This is the value which can extend the session, until it hits its maximum
 # lifetime set with _FED_CM.
 # default: 259200
-SESSION_TIMEOUT_FED_CM=259200
+#SESSION_TIMEOUT_FED_CM=259200
 
 #####################################
 ####### LIFETIMES / TIMEOUTS ########
