update changelog and book with `SEC_HEADER_BLOCK`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -56,7 +56,7 @@ USERINFO_STRICT=true
 # experience any issues with an already existing Rauthy deployment.
 # In future releases, it will not be possible the disable these blocks.
 # default: true
-SEC_HEADER_BLOCK=true
+#SEC_HEADER_BLOCK=true
 
 # If set to 'true', this will validate the remote peer IP address with each request and compare it with the
 # IP which was used during the initial session creation / login.
