fix copy&paste `TPL_` translations

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1014,10 +1014,10 @@ SSP_THRESHOLD=1000
 #TPL_DE_PASSWORD_NEW_FOOTER=""
 
 # Password Reset E-Mail
-#TPL_EN_RESET_SUBJECT="Neues Passwort"
-#TPL_EN_RESET_HEADER="Neues Passwort für"
+#TPL_EN_RESET_SUBJECT="Password Reset Request"
+#TPL_EN_RESET_HEADER="Password reset request for"
 #TPL_EN_RESET_TEXT=""
-#TPL_EN_RESET_CLICK_LINK="Klicken Sie auf den unten stehenden Link um ein neues Passwort zu setzen."
+#TPL_EN_RESET_CLICK_LINK="Click the link below to get forwarded to the password request form."
 #TPL_EN_RESET_VALIDITY="This link is only valid for a short period of time for security reasons."
 #TPL_EN_RESET_EXPIRES="Link expires:"
 #TPL_EN_RESET_BUTTON="Reset Password"
