get rid of `&'a str` deserialization for upstream IdP tokens and use `Cow<_>` for compatibility

--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -66,6 +66,7 @@ semver = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_json_path = { workspace = true }
+serde_with = { workspace = true }
 spow = { workspace = true }
 sqlx = { workspace = true }
 time = { workspace = true }
