--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,6 +95,7 @@ semver = { version = "1.0.19", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_json_path = "0.6.7"
+serde_with = { version = "3.8.1", features = ["macros"] }
 spow = "0.2"
 sqlx = { version = "0.7", features = ["macros", "migrate", "postgres", "runtime-tokio", "sqlite", "tls-rustls", "uuid"] }
 time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
