move `ErrorResponse` and all impls into separate crate

--- a/src/bin/Cargo.toml
+++ b/src/bin/Cargo.toml
@@ -11,6 +11,7 @@ postgres = []
 
 [dependencies]
 rauthy-common = { path = "../common" }
+rauthy-error = { path = "../error" }
 rauthy-handlers = { path = "../api" }
 rauthy-middlewares = { path = "../middlewares" }
 rauthy-models = { path = "../models" }
