--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -6,39 +6,24 @@ authors.workspace = true
 license.workspace = true
 
 [dependencies]
-actix-multipart = { workspace = true }
+rauthy-error = { path = "../error" }
+
 actix-web = { workspace = true }
 argon2 = { workspace = true }
 base64 = { workspace = true }
-bincode = { workspace = true }
 chacha20poly1305 = { workspace = true }
 chrono = { workspace = true }
-css-color = { workspace = true }
-cryptr = { workspace = true }
-derive_more = { workspace = true }
 flume = { workspace = true }
 gethostname = { workspace = true }
-image = { workspace = true }
 lazy_static = { workspace = true }
-once_cell = "1"
+once_cell = { workspace = true }
 rand = { workspace = true }
 rand_core = { workspace = true }
-redhac = { workspace = true }
 regex = { workspace = true }
-reqwest = { workspace = true }
-rio_api = { workspace = true }
-rio_turtle = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-serde_json_path = { workspace = true }
-spow = { workspace = true }
-sqlx = { workspace = true }
-time = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
-utoipa = { workspace = true }
-validator = { workspace = true }
-oxiri = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = "1"
