--- a/src/error/Cargo.toml
+++ b/src/error/Cargo.toml
@@ -1,39 +1,37 @@
 [package]
-name = "rauthy-service"
+name = "rauthy-error"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
 
 [dependencies]
-rauthy-common = { path = "../common" }
-rauthy-error = { path = "../error" }
-rauthy-models = { path = "../models" }
-
+actix-multipart = { workspace = true }
 actix-web = { workspace = true }
 argon2 = { workspace = true }
-askama = { workspace = true }
-askama_actix = { workspace = true }
+base64 = { workspace = true }
+bincode = { workspace = true }
 chacha20poly1305 = { workspace = true }
 chrono = { workspace = true }
+css-color = { workspace = true }
 cryptr = { workspace = true }
 derive_more = { workspace = true }
-jwt-simple = { workspace = true }
-rand = { workspace = true }
-rand_core = { workspace = true }
+flume = { workspace = true }
+image = { workspace = true }
 redhac = { workspace = true }
-ring = { workspace = true }
+reqwest = { workspace = true }
+rio_turtle = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_json_path = { workspace = true }
+spow = { workspace = true }
 sqlx = { workspace = true }
 time = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
 tokio = { workspace = true }
 utoipa = { workspace = true }
-utoipa-swagger-ui = { workspace = true }
 validator = { workspace = true }
-webauthn-rs = { workspace = true }
+oxiri = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = "1"
