--- a/src/middlewares/Cargo.toml
+++ b/src/middlewares/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 
 [dependencies]
 rauthy-common = { path = "../common" }
+rauthy-error = { path = "../error" }
 rauthy-models = { path = "../models" }
 rauthy-service = { path = "../service" }
 
