--- a/src/models/Cargo.toml
+++ b/src/models/Cargo.toml
@@ -14,6 +14,10 @@ default = []
 postgres = []
 
 [dependencies]
+rauthy-common = { path = "../common" }
+rauthy-error = { path = "../error" }
+rauthy-notify = { path = "../notify" }
+
 accept-language = { workspace = true }
 actix = { workspace = true }
 actix-multipart = { workspace = true }
@@ -52,8 +56,6 @@ openssl-sys = { workspace = true }
 once_cell = { workspace = true }
 rand = { workspace = true }
 rand_core = { workspace = true }
-rauthy-common = { path = "../common" }
-rauthy-notify = { path = "../notify" }
 redhac = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
