add new config var `TRUSTED_PROXIES`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -944,6 +944,15 @@ HTTP_WORKERS=1
 # When rauthy is running behind a reverse proxy, set to true (default: false)
 PROXY_MODE=false
 
+# A `\n` separated list of trusted proxy CIDRs.
+# When `PROXY_MODE=true` or `PEER_IP_HEADER_NAME` is set,
+# these are mandatory to be able to extract the real client
+# IP properly and safely to prevent IP header spoofing.
+# All requests with a different source will be blocked.
+TRUSTED_PROXIES="
+192.168.14.0/24
+"
+
 # To enable or disable the additional HTTP server to expose the /metrics endpoint
 # default: true
 #METRICS_ENABLE=true
