--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ bincode = "1"
 cached = "0.51.0"
 chacha20poly1305 = { version = "0.10", features = ["std"] }
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
+cidr = "0.2.2"
 cron = "0.12"
 cryptr = { version = "0.4", features = ["s3", "streaming"] }
 css-color = "0.2"
