--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -13,6 +13,7 @@ argon2 = { workspace = true }
 base64 = { workspace = true }
 chacha20poly1305 = { workspace = true }
 chrono = { workspace = true }
+cidr = { workspace = true }
 flume = { workspace = true }
 gethostname = { workspace = true }
 lazy_static = { workspace = true }
