`USER_REG_DOMAIN_BLACKLIST` config var

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -50,6 +50,14 @@ USERINFO_STRICT=true
 # default: ''
 #USER_REG_DOMAIN_RESTRICTION=@some-mail-domain.com
 
+# If `OPEN_USER_REG=true`, you can blacklist certain domains
+# on the open registration endpoint.
+# Provide the domains as a `\n` separated list.
+USER_REG_DOMAIN_BLACKLIST="
+example.com
+evil.net
+"
+
 # If set to true, a violation inside the CSRF protection middleware based
 # on Sec-* headers will block invalid requests. Usually you always want this
 # enabled. You may only set it to false during the first testing phase if you
