update dev config

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -53,10 +53,10 @@ USERINFO_STRICT=true
 # If `OPEN_USER_REG=true`, you can blacklist certain domains
 # on the open registration endpoint.
 # Provide the domains as a `\n` separated list.
-USER_REG_DOMAIN_BLACKLIST="
-example.com
-evil.net
-"
+#USER_REG_DOMAIN_BLACKLIST="
+#example.com
+#evil.net
+#"
 
 # If set to true, a violation inside the CSRF protection middleware based
 # on Sec-* headers will block invalid requests. Usually you always want this
@@ -957,9 +957,9 @@ PROXY_MODE=false
 # these are mandatory to be able to extract the real client
 # IP properly and safely to prevent IP header spoofing.
 # All requests with a different source will be blocked.
-TRUSTED_PROXIES="
-192.168.14.0/24
-"
+#TRUSTED_PROXIES="
+#192.168.14.0/24
+#"
 
 # To enable or disable the additional HTTP server to expose the /metrics endpoint
 # default: true
