move helper fn's only used in tests outside of main code

--- a/src/bin/Cargo.toml
+++ b/src/bin/Cargo.toml
@@ -47,4 +47,5 @@ josekit = "0.8"
 pretty_assertions = "1"
 reqwest = { workspace = true }
 ring = { workspace = true }
+serde = "1"
 tokio-test = "*"
