fix typo in dev config

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -730,7 +730,7 @@ EVENT_MATRIX_ERROR_NO_PANIC=true
 #EVENT_SLACK_WEBHOOK=
 
 # The notification level for events. Works the same way as a logging level. For instance:
-# 'notice' means send out a notifications for all events with the info level or higher.
+# 'notice' means send out a notifications for all events with the notice level or higher.
 # Possible values:
 # - info
 # - notice
