update typos in current config

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -106,12 +106,13 @@ USERINFO_STRICT=true
 #PEER_IP_HEADER_NAME="CF-Connecting-IP"
 
 # You can enable authn/authz headers which would be added to the response
-# of the `/auth/v1/forward_auth` endpoint. With  `AUTH_HEADERS_ENABLE=true`,
+# of the `/auth/v1/oidc/forward_auth` endpoint. With  `AUTH_HEADERS_ENABLE=true`,
 # the headers below will be added to authenticated requests. These could
 # be used on legacy downstream applications, that don't support OIDC on
 # their own.
 # However, be careful when using this, since this kind of authn/authz has
 # a lot of pitfalls out of the scope of Rauthy.
+# default: false
 AUTH_HEADERS_ENABLE=true
 
 # Configure the header names being used for the different values.
