--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "vite": "^5.0.12",
     "vite-plugin-top-level-await": "1.4.1",
     "vite-plugin-wasm": "3.3.0",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "@swc/core": "1.6.0"
   },
   "type": "module"
 }
