add config var `DANGER_DISABLE_INTROSPECT_AUTH`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -45,6 +45,13 @@ OPEN_USER_REG=true
 # default: true
 USERINFO_STRICT=true
 
+# Can be set to `true` to disable authorization on `/oidc/introspect`.
+# This should usually never be done, but since the auth on that endpoint is not
+# really standardized, you may run into issues with your client app.
+# If so, please open an issue about it.
+# default: false
+DANGER_DISABLE_INTROSPECT_AUTH=false
+
 # Can be used when 'OPEN_USER_REG=true' to restrict the domains for a registration. For instance, set it to
 # 'USER_REG_DOMAIN_RESTRICTION=gmail.com' to allow only registrations with 'user@gmail.com'.
 # default: ''
