adopt existing integration tests to new introspection endpoint

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -50,7 +50,7 @@ USERINFO_STRICT=true
 # really standardized, you may run into issues with your client app.
 # If so, please open an issue about it.
 # default: false
-DANGER_DISABLE_INTROSPECT_AUTH=false
+#DANGER_DISABLE_INTROSPECT_AUTH=false
 
 # Can be used when 'OPEN_USER_REG=true' to restrict the domains for a registration. For instance, set it to
 # 'USER_REG_DOMAIN_RESTRICTION=gmail.com' to allow only registrations with 'user@gmail.com'.
