--- a/src/error/Cargo.toml
+++ b/src/error/Cargo.toml
@@ -21,6 +21,7 @@ image = { workspace = true }
 redhac = { workspace = true }
 reqwest = { workspace = true }
 rio_turtle = { workspace = true }
+ruma = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_json_path = { workspace = true }
