add new config var `EVENT_MATRIX_SERVER_URL`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -709,13 +709,16 @@ EVENT_EMAIL=admin@localhost.de
 # you should provide `EVENT_MATRIX_ACCESS_TOKEN`.
 # If both are given, the `EVENT_MATRIX_ACCESS_TOKEN` will be preferred.
 #
-# If left empty, no messages will be sent to Slack.
+# If left empty, no messages will not be sent to Matrix.
 # Format: `@<user_id>:<server address>`
 #EVENT_MATRIX_USER_ID=
 # Format: `!<random string>:<server address>`
 #EVENT_MATRIX_ROOM_ID=
 #EVENT_MATRIX_ACCESS_TOKEN=
 #EVENT_MATRIX_USER_PASSWORD=
+# URL of your Matrix server.
+# default: https://matrix.org
+#EVENT_MATRIX_SERVER_URL=https://matrix.org
 # Optional path to a PEM Root CA certificate file for the Matrix client.
 #EVENT_MATRIX_ROOT_CA_PATH=tls/root.cert.pem
 # May be set to disable the TLS validation for the Matrix client.
