--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,6 +91,7 @@ serde_json = "1"
 serde_json_path = "0.6.7"
 serde_with = { version = "3.8.1", features = ["macros"] }
 spow = "0.3"
+# pinned to 0.8.0 because 0.8.1 has been yanked
 sqlx = { version = "=0.8.0", features = ["macros", "migrate", "postgres", "runtime-tokio", "sqlite", "tls-rustls", "uuid"] }
 time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
 tracing = { version = "0.1", features = ["attributes"] }
