Support listening on UNIX domain sockets

--- a/rauthy.test.cfg
+++ b/rauthy.test.cfg
@@ -38,7 +38,8 @@ LISTEN_PORT_HTTP=8081
 # default: 8443
 LISTEN_PORT_HTTPS=8444
 
-# The scheme to use locally, valid values: http | https | http_https (default: http_https)
+# The scheme to use locally, valid values: http | https | http_https | unix_http | unix_https (default: http_https)
+# For more details about the UNIX domain socket, check out its documentation page.
 LISTEN_SCHEME=http
 
 # The hostname used for host guard headers. If the HTTP 'Host' header does not match this, rauthy will reject
