--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -950,8 +950,9 @@ LISTEN_PORT_HTTP=8080
 # default: 8443
 LISTEN_PORT_HTTPS=8443
 
-# The scheme to use locally, valid values: http | https | http_https | unix_http | unix_https (default: http_https)
+# The scheme to use locally, valid values: http | https | http_https | unix_http | unix_https
 # For more details about the UNIX domain socket, check out its documentation page.
+# default: http_https
 LISTEN_SCHEME=http_https
 
 # The Public URL of the whole deployment
