--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -303,6 +303,60 @@ BACKUP_RETENTION_LOCAL=24
 ############## CACHE ################
 #####################################
 
+# Can be set to 'k8s' to try to split off the node id from the hostname
+# when Hiqlite is running as a StatefulSet inside Kubernetes.
+# Will be ignored if `HQL_NODE_ID_FROM=k8s`
+#HQL_NODE_ID_FROM=k8s
+
+# The node id must exist in the nodes and there must always be
+# at least a node with ID 1
+HQL_NODE_ID=1
+
+# All cluster member nodes.
+# To make setting the env var easy, the values are separated by `\s`
+# while nodes are separated by `\n`
+# in the following format:
+#
+# id addr_raft addr_api
+# id addr_raft addr_api
+# id addr_raft addr_api
+#
+# 2 nodes must be separated by 2 `\n`
+HQL_NODES="
+1 localhost:8100 localhost:8200
+"
+
+# If set to `true`, all SQL statements will be logged for debugging
+# purposes.
+# default: false
+HQL_LOG_STATEMENTS=true
+
+# If given, these keys / certificates will be used to establish
+# TLS connections between nodes.
+#HQL_TLS_RAFT_KEY=tls/key.pem
+#HQL_TLS_RAFT_CERT=tls/cert-chain.pem
+#HQL_TLS_RAFT_DANGER_TLS_NO_VERIFY=true
+
+#HQL_TLS_API_KEY=tls/key.pem
+#HQL_TLS_API_CERT=tls/cert-chain.pem
+#HQL_TLS_API_DANGER_TLS_NO_VERIFY=true
+
+# Secrets for Raft internal authentication as well as for the API.
+# These must be at least 16 characters long and you should provide
+# different ones for both variables.
+HQL_SECRET_RAFT=SuperSecureSecret1337
+HQL_SECRET_API=SuperSecureSecret1337
+
+# You can either parse `ENC_KEYS` and `ENC_KEY_ACTIVE` from the
+# environment with setting this value to `env`, or parse them from
+# a file on disk with `file:path/to/enc/keys/file`
+# default: env
+#HQL_ENC_KEYS_FROM=env
+
+#####################################
+########## CACHE LEGACY #############
+#####################################
+
 # If the cache should start in HA mode or standalone
 # accepts 'true|false', defaults to 'false'
 HA_MODE=false
@@ -897,6 +951,11 @@ ML_LT_PWD_FIRST=4320
 # This is the log level for stdout logs
 # Accepts: error, info, debug, trace (default: info)
 LOG_LEVEL=debug
+
+# The log level for the `Hiqlite` persistence layer.
+# At the time of writing, only the cache will use `hiqlite`
+# default: info
+LOG_LEVEL_DATABASE=info
 
 # This is a special config which allows the configuration of customized access logs.
 # These logs will be logged with each request in addition to the normal LOG_LEVEL logs.
