--- a/src/error/Cargo.toml
+++ b/src/error/Cargo.toml
@@ -17,6 +17,7 @@ css-color = { workspace = true }
 cryptr = { workspace = true }
 derive_more = { workspace = true }
 flume = { workspace = true }
+hiqlite = { workspace = true }
 image = { workspace = true }
 redhac = { workspace = true }
 reqwest = { workspace = true }
