--- a/rauthy.test.cfg
+++ b/rauthy.test.cfg
@@ -59,12 +59,17 @@ LOG_LEVEL=debug
 # If 'true', MFA for an account must be enabled to access the rauthy admin UI (default: true)
 ADMIN_FORCE_MFA=false
 
-HA_MODE=false
+HQL_NODE_ID=1
+HQL_NODES="
+1 localhost:8100 localhost:8200
+"
+HQL_SECRET_RAFT=SuperSecureSecret1337
+HQL_SECRET_API=SuperSecureSecret1337
 
+HA_MODE=false
 # The connection strings (with hostnames) of the HA instances as a CSV
 # Format: 'scheme://hostname:port'
 HA_HOSTS="http://sd-fedora:8080, http://127.0.0.1:8081 ,http://127.0.0.1:8082"
-
 # Secret token, which is used to authenticate the cache members
 CACHE_AUTH_TOKEN=SuperSecureToken1337
 
