--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -331,16 +331,6 @@ HQL_NODES="
 # default: false
 HQL_LOG_STATEMENTS=true
 
-# If given, these keys / certificates will be used to establish
-# TLS connections between nodes.
-#HQL_TLS_RAFT_KEY=tls/key.pem
-#HQL_TLS_RAFT_CERT=tls/cert-chain.pem
-#HQL_TLS_RAFT_DANGER_TLS_NO_VERIFY=true
-
-#HQL_TLS_API_KEY=tls/key.pem
-#HQL_TLS_API_CERT=tls/cert-chain.pem
-#HQL_TLS_API_DANGER_TLS_NO_VERIFY=true
-
 # Secrets for Raft internal authentication as well as for the API.
 # These must be at least 16 characters long and you should provide
 # different ones for both variables.
@@ -352,66 +342,6 @@ HQL_SECRET_API=SuperSecureSecret1337
 # a file on disk with `file:path/to/enc/keys/file`
 # default: env
 #HQL_ENC_KEYS_FROM=env
-
-#####################################
-########## CACHE LEGACY #############
-#####################################
-
-# If the cache should start in HA mode or standalone
-# accepts 'true|false', defaults to 'false'
-HA_MODE=false
-
-# The connection strings (with hostnames) of the HA instances as a CSV
-# Format: 'scheme://hostname:port'
-HA_HOSTS="https://127.0.0.1:8001, https://127.0.0.1:8002 ,https://127.0.0.1:8003"
-
-# Overwrite the hostname which is used to identify each cache member.
-# Useful in scenarios, where for instance all members are on the same host with different ports or for testing.
-HOSTNAME_OVERWRITE="127.0.0.1:8001"
-
-## Define buffer sizes for channels between the components
-# Buffer for client requests on the incoming stream - server side (default: 128)
-# Make sense to have the CACHE_BUF_SERVER set to: `(number of total HA cache hosts - 1) * CACHE_BUF_CLIENT`
-# In a non-HA deployment, set the same size for both
-CACHE_BUF_SERVER=128
-# Buffer for client requests to remote servers for all cache operations (default: 128)
-CACHE_BUF_CLIENT=128
-
-# The max cache size for users. If you can afford it memory-wise, make it possible to fit
-# all active users inside the cache.
-# The cache size you provide here should roughly match the amount of users you want to be able
-# to cache actively. Depending on your setup (WebIDs, custom attributes, ...), this number
-# will be multiplied internally  by 3 or 4 to create multiple cache entries for each user.
-# default: 100
-CACHE_USERS_SIZE=100
-# The lifespan of the users cache in seconds. Cache eviction on updates will be handled automatically.
-# default: 28800
-CACHE_USERS_LIFESPAN=28800
-
-# Secret token, which is used to authenticate the cache members
-#CACHE_AUTH_TOKEN=
-
-## Connections Timeouts
-
-# The Server sends out keepalive pings with configured timeouts
-# The keepalive ping interval in seconds (default: 5)
-CACHE_KEEPALIVE_INTERVAL=5
-# The keepalive ping timeout in seconds (default: 5)
-CACHE_KEEPALIVE_TIMEOUT=5
-
-# The timeout for the leader election. If a newly saved leader request has not reached quorum after the timeout, the
-# leader will be reset and a new request will be sent out.
-# CAUTION: This should not be lower than CACHE_RECONNECT_TIMEOUT_UPPER, since cold starts and elections will be
-# problematic in that case.
-# value in seconds, default: 15
-CACHE_ELECTION_TIMEOUT=5
-
-# These 2 values define the reconnect timeout for the HA Cache Clients.
-# The values are in ms and a random between these 2 will be chosen each time to avoid conflicts and race conditions
-# (default: 2500)
-CACHE_RECONNECT_TIMEOUT_LOWER=2500
-# (default: 5000)
-CACHE_RECONNECT_TIMEOUT_UPPER=5000
 
 #####################################
 ############ DATABASE ###############
@@ -1137,42 +1067,15 @@ TLS_KEY=tls/key.pem
 
 ## CACHE TLS
 
-# Enable / disable TLS for the cache communication (default: true)
-CACHE_TLS=true
+# If given, these keys / certificates will be used to establish
+# TLS connections between nodes.
+HQL_TLS_RAFT_KEY=tls/key.pem
+HQL_TLS_RAFT_CERT=tls/cert-chain.pem
+HQL_TLS_RAFT_DANGER_TLS_NO_VERIFY=true
 
-# The path to the server TLS certificate PEM file
-# default: tls/redhac.cert-chain.pem
-CACHE_TLS_SERVER_CERT=tls/cert-chain.pem
-# The path to the server TLS key PEM file
-# default: tls/redhac.key.pem
-CACHE_TLS_SERVER_KEY=tls/key.pem
-
-# The path to the client mTLS certificate PEM file. This is optional.
-CACHE_TLS_CLIENT_CERT=tls/cert-chain.pem
-# The path to the client mTLS key PEM file. This is optional.
-CACHE_TLS_CLIENT_KEY=tls/key.pem
-
-# If not empty, the PEM file from the specified location will be
-# added as the CA certificate chain for validating
-# the servers TLS certificate. This is optional.
-CACHE_TLS_CA_SERVER=tls/ca-chain.pem
-# If not empty, the PEM file from the specified location will
-# be added as the CA certificate chain for validating
-# the clients mTLS certificate. This is optional.
-CACHE_TLS_CA_CLIENT=tls/ca-chain.pem
-
-# The domain / CN the client should validate the certificate
-# against. This domain MUST be inside the
-# 'X509v3 Subject Alternative Name' when you take a look at
-# the servers certificate with the openssl tool.
-# default: redhac.local
-CACHE_TLS_CLIENT_VALIDATE_DOMAIN=redhac.local
-
-# Can be used if you need to overwrite the SNI when the
-# client connects to the server, for instance if you are
-# behind a loadbalancer which combines multiple certificates.
-# default: ""
-#CACHE_TLS_SNI_OVERWRITE=
+HQL_TLS_API_KEY=tls/key.pem
+HQL_TLS_API_CERT=tls/cert-chain.pem
+HQL_TLS_API_DANGER_TLS_NO_VERIFY=true
 
 #####################################
 ############# WEBAUTHN ##############
