--- a/Dockerfile_builder
+++ b/Dockerfile_builder
@@ -1,6 +1,6 @@
 ARG IMAGE
 
-FROM --platform=$BUILDPLATFORM $IMAGE as rust
+FROM --platform=$BUILDPLATFORM $IMAGE AS rust
 
 # docker buildx args automatically available
 ARG BUILDPLATFORM
@@ -56,7 +56,7 @@ RUN chmod a+rwx -R /home
 ############################################
 ############################################
 
-FROM --platform=$BUILDPLATFORM $IMAGE as openssl
+FROM --platform=$BUILDPLATFORM $IMAGE AS openssl
 
 ENV LD_LIBRARY_PATH="${PATH}:/usr/local/lib64:${LD_LIBRARY_PATH}"
 ENV PKG_CONFIG_PATH="/usr/local/lib64/pkgconfig"
