--- a/Dockerfile_builder_gnu
+++ b/Dockerfile_builder_gnu
@@ -1,4 +1,4 @@
-FROM rust:1.81.0-bookworm AS rust
+FROM --platform=$BUILDPLATFORM rust:1.81.0-bookworm AS rust
 
 # docker buildx args automatically available
 ARG BUILDPLATFORM
