--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ strip = true
 panic = "abort"
 
 [patch.crates-io]
-hiqlite = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite" }
+#hiqlite = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite" }
 #hiqlite = { path = "../hiqlite/hiqlite", package = "hiqlite" }
 
 [workspace.dependencies]
@@ -54,7 +54,7 @@ futures = "0.3"
 futures-util = "0.3"
 gethostname = "0.5.0"
 hex = { version = "0.4", features = ["serde"] }
-hiqlite = { version = "0.2.0", default-features = false, features = ["cache", "listen_notify"] }
+hiqlite = { version = "0.2.1", default-features = false, features = ["cache", "listen_notify"] }
 hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
 hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
 image = { version = "0.25.1", default-features = false, features = [
