Add test for regex and explanation into config file

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -375,7 +375,7 @@ HQL_SECRET_API=SuperSecureSecret1337
 
 # Defines the time in seconds after which the `/health` endpoint
 # includes HA quorum checks. The initial delay solves problems
-# like Kubernetes StatefulSet starts that include the health 
+# like Kubernetes StatefulSet starts that include the health
 # endpoint in the scheduling routine. In these cases, the scheduler
 # will not start other Pods if the first does not become healthy.
 #
@@ -965,6 +965,14 @@ PROXY_MODE=false
 #TRUSTED_PROXIES="
 #192.168.14.0/24
 #"
+
+# To bring support to applications that use deep-linking, you can set the
+# custom URL scheme to allow for the `Origin` header to be set to this value.
+# This is especially useful for Electron and Tauri apps, which may have a
+# custom URL scheme. The value is a space separated list of allowed schemes.
+# The following example shows the values for the "tauri://locahost" and
+# "myapp://localhost" origin URLs.
+ADDITIONAL_ALLOWED_ORIGIN_SCHEMES="tauri myapp"
 
 # To enable or disable the additional HTTP server to expose the /metrics endpoint
 # default: true
