add `ADDITIONAL_ALLOWED_ORIGIN_SCHEMES` to the book reference config

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -966,12 +966,12 @@ PROXY_MODE=false
 #192.168.14.0/24
 #"
 
-# To bring support to applications that use deep-linking, you can set the
-# custom URL scheme to allow for the `Origin` header to be set to this value.
-# This is especially useful for Electron and Tauri apps, which may have a
-# custom URL scheme. The value is a space separated list of allowed schemes.
-# The following example shows the values for the "tauri://locahost" and
-# "myapp://localhost" origin URLs.
+# To bring support for applications using deep-linking, you can set custom URL
+# schemes to be accepted when present in the `Origin` header. For instance, a
+# Tauri app would set `tauri://` instead of `https://`.
+#
+# Provide the value as a space separated list of Strings, like for instance:
+# "tauri myapp"
 ADDITIONAL_ALLOWED_ORIGIN_SCHEMES="tauri myapp"
 
 # To enable or disable the additional HTTP server to expose the /metrics endpoint
