integrate hiqlite into startup + migration routine, add justfile starter

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -416,6 +416,13 @@ HQL_NODES="
 #MIGRATE_DB_FROM=sqlite:data/rauthy.db
 #MIGRATE_DB_FROM=postgresql://postgres:123SuperSafe@localhost:5432/rauthy
 
+# TODO: make the DB url uniform after Hiqlite migration has been finished
+#       -> DATABASE_URL must be valid for the sqlx macros to not panic
+#
+# To use the EXPERIMENTAL Hiqlite database, set to `true`
+# default: false
+#HIQLITE=true
+
 # The data dir hiqlite will store raft logs and state machine data in.
 # default: data
 #HQL_DATA_DIR=my_hiqlite
