--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ panic = "abort"
 
 [patch.crates-io]
 #hiqlite = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite" }
-#hiqlite = { path = "../hiqlite/hiqlite", package = "hiqlite" }
+hiqlite = { path = "../hiqlite/hiqlite", package = "hiqlite" }
 
 [workspace.dependencies]
 accept-language = "3"
