migration of `schedulers::devices_cleanup()`

--- a/src/schedulers/Cargo.toml
+++ b/src/schedulers/Cargo.toml
@@ -13,6 +13,7 @@ rauthy-service = { path = "../service" }
 actix-web = { workspace = true }
 chrono = { workspace = true }
 cron = { workspace = true }
+hiqlite = { workspace = true }
 semver = { workspace = true }
 sqlx = { workspace = true }
 time = { workspace = true }
