migration "finished" until testing and validation can begin - cleanup still left

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -421,7 +421,7 @@ HQL_NODES="
 #
 # To use the EXPERIMENTAL Hiqlite database, set to `true`
 # default: false
-#HIQLITE=true
+HIQLITE=true
 
 # The data dir hiqlite will store raft logs and state machine data in.
 # default: data
