--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = ["src/*"]
 exclude = ["rauthy-client"]
 
 [workspace.package]
-version = "0.26.2"
+version = "0.27.0-20241031"
 edition = "2021"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "Apache-2.0"
@@ -83,7 +83,7 @@ ring = "0.17"
 rio_api = "0.8.4"
 rio_turtle = "0.8.4"
 rsa = { version = "0.9.3", features = ["serde", "sha2"] }
-ruma = { version = "0.10.1", features = ["client-api-c", "client-ext-client-api", "client-reqwest", "markdown", "rand"] }
+ruma = { version = "0.11.0", features = ["client-api-c", "client-ext-client-api", "client-reqwest", "markdown", "rand"] }
 rust-embed = "8.5.0"
 rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
 rustls-pki-types = "1.4.1"
